# Qt-TcpClient

./: README.md
Qt-TcpClient/: CMakeLists.txt  main.cpp  main.qml  tcpclient.cpp  tcpclient.h
test-tool/: main.py
